2.2.5.1 Patch C
- Added CustomModelData to allow players to customize models used to render Item Traders
- Fixed various places that didn't properly reset the MoneyValueWidget's starting value when closed and re-opened